--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea
+.ser
+.swift
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
